# taller-python-bases-de-datos

./: .gitignore  01GoogleColab.ipynb  01JupyterNotebook.ipynb  02PythonBasico.ipynb  03ArchivoCSV.ipynb  03SQLBasico.ipynb  04ConsultarAPI.ipynb  04ConsultarAPIs.ipynb  README.md  pyproject.toml
docs/: PythonParaBasesDeDatos.md  index.html
